<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/activity_main_drawer_news"
            android:icon="@drawable/ic_category_white_24dp"
            android:title="@string/categories" />
    </group>

    <item android:title="@string/sections">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/activity_main_drawer_arts"

                    android:title="@string/arts" />
                <item
                    android:id="@+id/activity_main_drawer_politics"

                    android:title="@string/politics" />
                <item
                    android:id="@+id/activity_main_drawer_travel"

                    android:title="@string/travel" />
                <item
                    android:id="@+id/activity_main_drawer_technology"

                    android:title="@string/techno" />

                <item
                    android:id="@+id/activity_main_drawer_automobiles"

                    android:title="@string/autos" />
                <item
                    android:id="@+id/activity_main_drawer_sports"

                    android:title="@string/sports" />
                <item
                    android:id="@+id/activity_main_drawer_Business"

                    android:title="@string/business" />
            </group>
        </menu>
    </item>

</menu>