<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.AboutActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textColor="@color/colorPrimary"
        android:textSize="25sp"
        android:layout_marginTop="100dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/aboutMyNews"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:layout_marginTop="170dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/about2"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="15sp"
        android:layout_marginTop="250dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/findUrl"
        android:textColor="@color/Black"
        android:textSize="15sp"
        android:layout_marginTop="350dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="https://www.nytimes.com/"
        android:autoLink="web"
        android:layout_centerHorizontal="true"
        android:textSize="15sp"
        android:layout_marginTop="420dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textColor="@color/colorPrimary"
        android:textColorLink="@color/colorPrimary"
        tools:ignore="HardcodedText"/>


</RelativeLayout>